--- a/domain.yml
+++ b/domain.yml
@@ -23,18 +23,12 @@ intents:
 - version
 - f1_score
 - show_slots
-
+- affirm
 entities:
 - email
 - priority
 slots:
   email:
-    type: unfeaturized
-  profile_email:
-    type: unfeaturized
-  profile_name:
-    type: unfeaturized
-  profile_site:
     type: unfeaturized
   incident_title:
     type: unfeaturized
@@ -42,12 +36,17 @@ slots:
     type: unfeaturized
   problem_description:
     type: unfeaturized
+  profile_email:
+    type: unfeaturized
+  profile_name:
+    type: unfeaturized
+  profile_site:
+    type: unfeaturized
   requested_slot:
     type: unfeaturized
-
 responses:
   utter_version:
-  - text: "Model 1.3.0 - Apr 6, 2020"
+  - text: Model 1.3.0 - Apr 6, 2020
   utter_greet:
   - text: Hello, {profile_name}
   utter_goodbye:
@@ -55,9 +54,9 @@ responses:
   utter_iamabot:
   - text: I am a bot, powered by Rasa.
   utter_help:
-  - text: I can help you open a service request ticket.
-      You can ask me things like "Open an incident", "Help me reset my password", or 
-      "I'm having a issue with my email."
+  - text: I can help you open a service request ticket. You can ask me things like
+      "Open an incident", "Help me reset my password", or "I'm having a issue with
+      my email."
   utter_welcome:
   - text: You're welcome!
   utter_default:
@@ -73,12 +72,12 @@ responses:
   utter_ask_priority:
   - text: What is the priority of this issue?
     buttons:
-      - payload: /inform{"priority":"low"}
-        title: low
-      - payload: /inform{"priority":"medium"}
-        title: medium
-      - payload: /inform{"priority":"high"}
-        title: high
+    - payload: /inform{"priority":"low"}
+      title: low
+    - payload: /inform{"priority":"medium"}
+      title: medium
+    - payload: /inform{"priority":"high"}
+      title: high
   utter_no_priority:
   - text: Sorry "{priority}" is not a valid priority. Please try again.
   utter_no_email:
@@ -91,15 +90,12 @@ responses:
     text: The {profile_site} cafeteria menu can be viewed at http://jacksbbq.com/menu/
   utter_site_map:
   - text: Here is the {profile_site} campus map
-    image: "https://johnsonu.edu/wp-content/uploads/2019/06/TN-campus-map.jpg"
+    image: https://johnsonu.edu/wp-content/uploads/2019/06/TN-campus-map.jpg
   utter_site_emergency:
-  - text: "{profile_site} site emergency number is x111 or 555-555-55555"
+  - text: '{profile_site} site emergency number is x111 or 555-555-55555'
   utter_site_security:
-  - text: The {profile_site} security number is x222, the office is on the fourth floor, room 412 or see the front security desk
-
-forms:
-- open_incident_form
-
+  - text: The {profile_site} security number is x222, the office is on the fourth
+      floor, room 412 or see the front security desk
 actions:
 - action_session_start
 - action_version
@@ -107,3 +103,24 @@ actions:
 - action_reset_slots
 - action_show_slots
 - action_f1_score
+- utter_version
+- utter_greet
+- utter_goodbye
+- utter_iamabot
+- utter_help
+- utter_welcome
+- utter_default
+- utter_restart
+- utter_ask_email
+- utter_ask_incident_title
+- utter_ask_problem_description
+- utter_ask_priority
+- utter_no_priority
+- utter_no_email
+- utter_site_hours
+- utter_site_cafeteria_menu
+- utter_site_map
+- utter_site_emergency
+- utter_site_security
+forms:
+- open_incident_form
